feat: add `timestamp` field to know when the book is borrowed
